<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/createSchema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_create_schema" />


    <Button
        android:id="@+id/deleteSchema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_schema" />


    <Button
        android:id="@+id/createTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_create_table" />

    <Button
        android:id="@+id/deleteTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_table" />


    <Button
        android:id="@+id/insertRowToTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_insert_row_to_table" />


    <Button
        android:id="@+id/deleteRowFromTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_row_from_table" />


    <Button
        android:id="@+id/updateRowFromTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_update_row_from_table" />

    <Button
        android:id="@+id/selectAllFromTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_select_all_from_table" />

    <Button
        android:id="@+id/insertStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_insert_student" />

    <Button
        android:id="@+id/selectStudentBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_select_student_by" />


</LinearLayout>